<resources>
    <string name="app_name">FindME</string>
    <string name="heading_text">My Location Details</string>
    <string name="action_settings">Settings</string>


    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="time">Time:</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="hello_world">Hello world!</string>

    <string name="permission_required_title">Permission required</string>
    <string name="permission_required_msg" translatable="true">This application is used to get the user location. So, can\'t work without permission
    </string>

    <string name="accuracy">Accuracy: %1$d</string>
    <string name="current_activity">You are currently %s</string>

    <string name="in_vehicle">in a vehicle</string>
    <string name="on_bicycle">on a bicycle</string>
    <string name="on_foot">on foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown Activity</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
    <string name="not_connected">GoogleApiClient not yet connected. Try again later</string>

</resources>
